# Netology_HW

./: .gitignore
Base+programmy_Cplus/Cmake/Homework 03/Homework 03/: CMakeLists.txt  Homework 03.vcxproj.filters  Quadrangle.cpp  blalanced_triangle.h  equil_triangle.cpp  equil_triangle.h  parale.cpp  parale.h  right_triangle.h  romb.cpp  romb.h
Base+programmy_Cplus/IDE/Homework_1/: Homework_1.sln
Base+programmy_Cplus/Исключения и обработка ошибок/Homework 01/: Рщьуцщкл 01.sln
Base+programmy_Cplus/Многофайловые проекты и библиотеки/Homework 01/: Homework 01.sln
Base+programmy_Cplus/Многофайловые проекты и библиотеки/Homework 02/: Homework 02.sln
Base+programmy_Cplus/ООП Наследование и полиморфизм/Homeweork 02/: Homeweork 02.sln
Base+programmy_Cplus/ООП Наследование и полиморфизм/Homework 01/: Homework 01.sln
Base+programmy_Cplus/ООП Наследование и полиморфизм/Homework 03/: Homework 03.sln
Base+programmy_Cplus/ООП абстракции и инкапсуляции/Homework 01/: Homework 01.sln
Base+programmy_Cplus/ООП абстракции и инкапсуляции/Homework 02/: Homework 02.sln
Base+programmy_Cplus/Препроцессор и макросы/Homework 01/: Homework 01.sln
Base+programmy_Cplus/Препроцессор и макросы/Homework 02/: Homework 02.sln
Base+programmy_Cplus/Сборка и создание библиотек/Homework_03/: Homework_03.sln
Base+programmy_Cplus/Сборка и создание библиотек/LibraryDynamic/: LibraryDynamic.sln
Base+programmy_Cplus/Сборка и создание библиотек/LibraryStatic/: LibraryStatic.sln
Base+programmy_Cplus/Структуры и перечисления/Homework_1/: Homework_1.sln
(+90 files in other folders)
