cmake_minimum_required(VERSION 3.22.0)


project(my_second_cmake_project)

add_executable(my_second_cmake_project "main.cpp" blalanced_triangle.cpp blalanced_triangle.h equil_triangle.cpp equil_triangle.h figure.cpp figure.h parale.cpp parale.h printFigure.cpp printFigure.h Quadrangle.cpp Quadrangle.h rectangle.cpp rectangle.h right_triangle.cpp right_triangle.h romb.cpp romb.h square.cpp square.h triangle.cpp triangle.h)